--- a/palette/.eslintrc.json
+++ b/palette/.eslintrc.json
@@ -5,6 +5,10 @@
     "prettier/prettier": ["error"]
   },
   "env" :{
-    "browser": true
+    "browser": true,
+    "es6": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 2018
   }
 }
