--- a/palette/package.json
+++ b/palette/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "html2canvas": "^1.0.0-rc.1",
     "jquery": "^3.4.0",
     "normalize.css": "^8.0.1",
     "popper.js": "^1.15.0"
@@ -19,10 +20,10 @@
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.2.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.11.0",
+    "eslint-plugin-react": "^7.12.4",
     "prettier": "^1.17.0"
   }
 }
