--- a/palette/package.json
+++ b/palette/package.json
@@ -10,11 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^4.3.1",
     "html2canvas": "^1.0.0-rc.1",
-    "jquery": "^3.4.0",
-    "normalize.css": "^8.0.1",
-    "popper.js": "^1.15.0"
+    "live-server": "^1.2.1",
+    "normalize.css": "^8.0.1"
   },
   "devDependencies": {
     "eslint": "^5.3.0",
