--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,18 @@
 root = true
 
 [*]
-end_of_line = lf
-insert_final_newline = true
-[*.js]
-
 charset = utf-8
-indent_style = space
+end_of_line = lf
 indent_size = 4
+indent_style = space
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.js]
+quote_type = single
+
+[*.md]
+trim_trailing_whitespace = false
+
+[*.json]
+trim_trailing_whitespace = false
