--- a/youtube-client/package.json
+++ b/youtube-client/package.json
@@ -25,6 +25,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-import": "^2.17.2",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.7.1",
     "style-loader": "^0.23.1",
