--- a/animation-player/package.json
+++ b/animation-player/package.json
@@ -1,26 +1,53 @@
 {
-  "name": "codejam-dom_palette",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "npx eslint js/*.js",
-    "start": "live-server --browser=chrome --watch=./css,./assets,*.html,./js --entry-file=./index.html"
-  },
-  "author": "",
-  "license": "ISC",
+  "name": "angular",
+  "version": "0.0.0",
+  "private": true,
   "dependencies": {
-    "live-server": "^1.2.1",
-    "normalize.css": "^8.0.1"
+    "@angular/common": "^7.2.5",
+    "@angular/compiler": "^7.2.5",
+    "@angular/core": "^7.2.5",
+    "@angular/forms": "^7.2.5",
+    "@angular/platform-browser": "^7.2.5",
+    "@angular/platform-browser-dynamic": "^7.2.5",
+    "@angular/router": "^7.2.5",
+    "core-js": "^2.6.5",
+    "normalize.css": "^8.0.1",
+    "rxjs": "^6.4.0",
+    "zone.js": "^0.8.29"
+  },
+  "scripts": {
+    "ng": "ng",
+    "start": "run-p pug-it:w server",
+    "server": "ng serve --port 4000",
+    "build": "ng build",
+    "prebuild": "pug-it",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "pug-it": "pug src",
+    "pug-it:w": "pug src -P -w"
   },
   "devDependencies": {
-    "eslint": "^5.3.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.2.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "prettier": "^1.17.0"
+    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular/cli": "~7.0.2",
+    "@angular/compiler-cli": "~7.0.0",
+    "@angular/language-service": "~7.0.0",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~3.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "npm-run-all": "^4.1.5",
+    "protractor": "~5.4.0",
+    "pug-cli": "^1.0.0-alpha6",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.1.1"
   }
 }
